[package]
name = "circle-rs"
version = "0.3.1"
authors = ["Aleks Gnatovskyi <aleks.work2222@gmail.com>"]
edition = "2018"

description = "Minimalistic modern infinite terminal progress indicator."
keywords = ["progressbar", "terminal", "circle", "simple"]
license = "MIT"
repository = "https://github.com/alekspickle/circle-rs"
homepage = "https://github.com/alekspickle/circle-rs"


[lib]
name="circle_rs"
path="src/lib.rs"

[[bin]]
name="circle_example"
path="src/main.rs"