[package]
name = "circle-rs"
version = "0.3.3"
authors = ["Aleks Gnatovskyi <aleks.work2222@gmail.com>"]
edition = "2018"

description = "Minimalistic modern infinite progress indicator."
keywords = ["progressbar", "terminal", "circle", "simple"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekspickle/circle-rs"
homepage = "https://github.com/alekspickle/circle-rs"


[dependencies]
termion={version = "1.5.3", optional = true}

[features]
end = ["termion"]

default = []